# openclaw-voice-bridge

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  config.py  server.py  test_gateway.py
.github/workflows/: deploy.yml
archive/server-node/: .env.example  .gitignore  README.md  package.json
archive/server-node/src/: config.ts  env.ts  filters.test.ts  filters.ts  gateway.ts  groq.ts  index.ts  test-all.ts  test-gateway.ts  test-groq.ts  tts-chatterbox.ts  tts-provider.ts  tts.ts  types.ts
processors/: hallucination_filter.py  transcription_prefixer.py  ui_notifier.py
pwa/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
pwa/.github/workflows/: deploy.yml
pwa/public/: CNAME  generate-beep.js  generate-icons.html
pwa/scripts/: create-placeholder-icons.js  generate-icons.js  generate-icons.mjs
pwa/src/: App.svelte  app.css  main.ts  vite-env.d.ts
pwa/src/lib/: audio.ts  stores.ts  types.ts  vad.ts  (+2 more)
server/: .env.example  .gitignore  README.md  bot.py  config.py  package-lock.json  package.json  pyproject.toml  server.py  test_gateway.py
server/processors/: __init__.py  bot_state_notifier.py  hallucination_filter.py  response_cleaner.py
server/services/: __init__.py  chatterbox_tts.py
server/src/: config.ts  env.ts  filters.test.ts  filters.ts  gateway.ts  groq.ts  index.ts  test-tts.ts  tts-chatterbox.ts  tts-provider.ts  tts.ts  types.ts
server/static/: index.html
server/tests/: test_hallucination_filter.py
static/: index.html
tests/: test_response_cleaner.py
(+2 files in other folders)
